--- a/tut2/style.css
+++ b/tut2/style.css
@@ -1,29 +1,77 @@
+body{
+   background-color:grey;
+}
 .navbar{
     display:flex;
-    border:2px solid black;
     justify-content:space-between;
     background-color: grey;
     margin:0;
 }
 .nav-left{
-    border:2px solid black;
     padding-left: 10px;
-    color:white
+    color:black;
+}
+.logo{
+    height:100px;
 }
 .nav-right{
     display:flex;
     flex-direction: row;
     padding-right: 10px;
-    border:2px solid black;
     align-items: center;
-    color:grey;
+    color:white;
     font-size: 20px;
 }
 .a-element{
     padding: 15px;
-    border:2px solid black;
-    background-color: white;
+    background-color:grey;
 }
 a:hover{
     color:black;
+    font-size: 25px;
+}
+.image{
+    padding-left: 40%;
+}
+.bio{
+    display:flex;
+    color:black;
+    text-align: center;  
+    font-size: 20px;
+}
+.ser-heading{
+    text-align: center;
+    }
+.about-container{
+ text-align: center;
+}
+.sub-about-container{
+    display:flex;
+    flex-direction: row;
+    padding-left: 350px;
+}
+.info-1{
+    padding: 10px;
+    border:2px solid black;
+    margin:20px;
+}
+.info-1:hover{
+    background-color: black;
+    color:white;
+}
+.last{
+    text-align: center;
+}
+.sub-icons{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.icon-1{
+    padding: 20px;
+    font-size: 30px;
+}
+i:hover{
+    color:rgb(59, 127, 154);
+    font-size: 50px;
 }
